# narrative-core-templates

nr-utils/: validate.py  weather.py
nr_utils/: cli_kpi.py  cli_weather.py  kpi.py  pyproject.toml  validate.py
retail/de/: report.html.j2
retail/de/prompts/retail/de/: narrative.md
