[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "narrative-utils"
version = "1.0.0"
description = "Reusable shaping & validation utilities for Narrative Reports"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Andreas Pohland"}]
dependencies = []  # optional: ["jsonschema>=4.23.0"]

[project.scripts]
nr-kpi = "nr_utils.cli_kpi:main"
nr-weather = "nr_utils.cli_weather:main"

[tool.setuptools.packages.find]
where = ["."]
